<resources>
    <string name="app_name" translatable="false">溧电共享</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaHVhaHVhMDEwNSIsImEiOiJjbGZpejJjNnMwOG5tM3hrcGxoYWFpOWhlIn0.G7ludu5FiqmtLh-JgegVng</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>

    <string name="permission_denied_explanation">Location permission denied.</string>
    <string name="permission_rationale">This function requires the location permission</string>
    <string name="switch_language">Switch Language</string>
    <string name="follow_system">System Language</string>
    <string name="scan_to_unlock">UNLOCK</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="enter_id">ENTER BIKE ID</string>
    <string name="flash_light">FLASHLIGHT</string>
    <string name="help">HELP</string>
    <string name="enter_code_hint">Please enter the bicycle number.</string>
    <string name="stop_ride">End the Ride</string>
    <string name="paymoney">Money:</string>
    <string name="pay_type">Select pay type</string>
    <string name="alipay">AliPay</string>
    <string name="wechatpay">Wechat Pay</string>
    <string name="paypal">PayPal</string>
    <string name="pay_now">Pay Now</string>
    <string name="login">Login</string>
    <string name="get_verify_code">Code</string>
    <string name="open_ble">Keep the bluetooth \"ON\" will unlock the ebike faster</string>
    <string name="about">About</string>
    <string name="checkForUpdates">Check for Updates</string>
    <string name="copyright">"© 2022 Nanjing Lishui Electronics Research Insititue Co., Ltd. "</string>
    <string name="sign_in">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="signin_promt">Unregistered users will create an account directly</string>
    <string name="alipay_ads">1 billion people are using it, it\'s really safe and more assured</string>
    <string name="unlock">unlock</string>
    <string name="ebike_no">NO:</string>
    <string name="soc">SOC</string>
    <string name="unlocking">Unlocking</string>
    <string name="end_promt">Trip will be finished when you lock the bike.</string>
    <string name="ble_test">BLE Test</string>
    <string name="ebike_config">EBike Config</string>
    <string name="mytrips">My Trips</string>
    <string name="connect_fail">Bluetooth connect failed.</string>
    <string name="unlock_fail_retry">Unlock failed,please retry</string>
    <string name="pay_title">Payment</string>
    <string name="my_rides">My Trips</string>
    <string name="logout">LogOut</string>
    <string name="setting">Setting</string>
    <string name="verify_code">Verification Code</string>
    <string name="scan">Scan</string>
    <string name="open_now">Open Now</string>
    <string name="pas_level">PAS</string>
    <string name="walk_mode">Walk Mode</string>
    <string name="lamp">HeadLight</string>
    <string name="brake_status">Brake Status</string>
    <string name="motor_status">Motor Status</string>
    <string name="controller_temp">ControllerTemp</string>
    <string name="motor_temp">MotorTemp</string>
    <string name="battery_temp">BatteryTemp</string>
    <string name="battery_voltage">Voltage</string>
    <string name="battery_current">Current</string>
    <string name="riding">Riding</string>
    <string name="ride_detail">DETAIL</string>
    <string name="price">PER 15MIN</string>
    <string name="cancel">CANCEL</string>
    <string name="have_paid">Paid</string>
    <string name="open_detail">Detail</string>
    <string name="order_complete">COMPLETE</string>
    <string name="have_not_pay">UNPAID</string>
    <string name="go_pay">CONTINUE</string>
    <string name="ride_time">TIME</string>
    <string name="close_detail">Detail</string>
    <string name="error_data">ERROR DATA</string>
    <string name="has_order">You have an order for riding, do you want to continue?</string>
    <string name="see_detail">Check Out</string>
    <string name="pay_success">Success</string>
    <string name="not_pay_order">You have an unpaid order, please pay first</string>
    <string name="please_input_phone_num">Mobile number</string>
    <string name="please_input_code">Verification code</string>
    <string name="network_unavaliable">Network Unavailable</string>
    <string name="error">Error</string>
    <string name="code_sended">Code Sended</string>
    <string name="speed">Speed km/h</string>
    <string name="odo">Mileage km</string>
    <string name="amount">Cost：</string>
    <string name="lock_fail_retry">Lock failed,please retry</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unsupported">不支持错误</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="register">注册</string>
    <string name="password">请输入密码</string>
    <string name="password_confirm">再次输入密码</string>
    <string name="balance">Balance</string>
    <string name="recharge_list">充值记录</string>
    <string name="recharge">Recharge</string>
    <string name="recharge_money">请输入充值金额</string>
    <string name="balance_string">余额：</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="login_by_code">短信验证码登录</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register_now">现在注册</string>
    <string name="login_protocol">"  登录即代表同意 《注册协议》、《隐私政策》 "</string>
    <string name="user_agreement2">《注册协议》</string>
    <string name="privacy_policy2">《隐私政策》</string>
    <string name="login_now">立即登录</string>
    <string name="welcome_register">您好，欢迎注册</string>
    <string name="register_success">恭喜您注册成功!</string>
    <string name="start_ride">开始用车</string>
    <string name="locking">锁车中</string>
    <string name="tapin">踏频</string>
    <string name="power">功率</string>
    <string name="light_status">大灯状态</string>
    <string name="qixingshijian">骑行时间</string>
    <string name="qixingfeiyong">骑行费用</string>
    <string name="charge_hint">请输入充值金额</string>
    <string name="charge_money">充值金额</string>
    <string name="continue_ride">继续骑行</string>
</resources>