<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/spacing_16"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_loading_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv"
        android:gravity="center"
        android:text="@string/not_pay_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16" />

    <TextView
        android:id="@+id/tv_ok"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_green_gradient"
        android:paddingLeft="@dimen/spacing_32"
        android:paddingTop="@dimen/spacing_6"
        android:paddingRight="@dimen/spacing_32"
        android:paddingBottom="@dimen/spacing_6"
        android:text="@string/go_pay"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16" />

    <TextView
        android:id="@+id/tv_end"
        android:layout_marginTop="@dimen/spacing_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_green_gradient"
        android:paddingLeft="@dimen/spacing_32"
        android:paddingTop="@dimen/spacing_6"
        android:paddingRight="@dimen/spacing_32"
        android:paddingBottom="@dimen/spacing_6"
        android:text="@string/stop_ride"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16" />
</LinearLayout>