<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/bg_shape_gradient">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_20" />
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/ll_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_24"
                android:text="@string/welcome_register"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/font_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_mobile"
                        android:drawablePadding="@dimen/spacing_8"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:textColor="@color/text_input_dark"
                        android:textColorHint="@color/text_gray"
                        android:textSize="@dimen/font_18" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:background="@drawable/bg_shape_gradient" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_24">

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toLeftOf="@id/bt_get_code"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_verify_code"
                        android:drawablePadding="@dimen/spacing_8"
                        android:hint="@string/verify_code"
                        android:textColor="@color/text_input_dark"
                        android:textColorHint="@color/text_gray" />

                    <TextView
                        android:id="@+id/bt_get_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/spacing_8"
                        android:background="@drawable/bg_four_corner_gradient"
                        android:gravity="center"
                        android:padding="@dimen/spacing_8"
                        android:text="@string/get_verify_code"
                        android:textColor="@color/white" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:background="@drawable/bg_shape_gradient" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_24">

                    <EditText
                        android:id="@+id/et_pwd_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_pwd"
                        android:drawablePadding="@dimen/spacing_8"
                        android:hint="@string/password"
                        android:textColor="@color/text_input_dark"
                        android:textColorHint="@color/text_gray" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:background="@drawable/bg_shape_gradient" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_24">

                    <EditText
                        android:id="@+id/et_pwd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:background="@null"
                        android:drawableLeft="@mipmap/ic_pwd"
                        android:drawablePadding="@dimen/spacing_8"
                        android:hint="@string/password_confirm"
                        android:textColor="@color/text_input_dark"
                        android:textColorHint="@color/text_gray" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_8"
                    android:background="@drawable/bg_shape_gradient" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_24"
                android:text=""
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/spacing_24"
                android:background="@drawable/bt_shape_gradient"
                android:gravity="center"
                android:padding="@dimen/spacing_6"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="@dimen/font_20" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ll_success"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/ic_register_success"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginBottom="@dimen/spacing_24"
                android:textSize="@dimen/font_24"
                android:textColor="@color/text_promt"
                android:text="@string/register_success"/>

            <TextView
                android:id="@+id/tv_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_32"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="@dimen/font_20"
                android:textStyle="bold"
                android:background="@drawable/bt_shape_gradient"
                android:padding="@dimen/spacing_12"
                android:text="@string/start_ride"/>
        </LinearLayout>
    </LinearLayout>

</layout>